--- a/nonimputed_&_protti.Rmd
+++ b/nonimputed_&_protti.Rmd
@@ -4,7 +4,6 @@ author: "Kacper Kaszuba"
 date: "`r Sys.Date()`"
 output: 
     html_document:
-        css: mystyle.css
         toc: true
         toc_float: 
             collapsed: false
@@ -25,7 +24,7 @@ plothist <- function(df, title='', plot.title.and.legend=TRUE) {
     if (plot.title.and.legend) {
         ret_plot <- ggplot(df, aes(x = LFQValue, fill = Rep)) +
             geom_histogram(alpha = 0.4, position = "identity", bins = 30) +
-            labs(title = paste("Histograms of Columns", title), x = "Values", y = "Frequency") +
+            labs(title = title, x = "Values", y = "Frequency") +
             theme(legend.title = element_blank())
     } else {
         ret_plot <- ggplot(df, aes(x = LFQValue, fill = Rep)) +
@@ -55,8 +54,6 @@ library(ggpubr)
 library(dplyr)
 library(tidyr)
 options(scipen=123)
-
-writeLines("td, th { padding:6px ; text-align:center} th { background-color:black ; color:white ; border:1px solid black; } td { color:black ; border:1px solid black ; text-align:center}", con = "mystyle.css")
 ```
 
 # Load Data
@@ -67,7 +64,7 @@ lfq <- read.csv('./data/nonimputed_lfq.csv')
 
 <center>
 ```{r echo=FALSE}
-knitr::kable(head(lfq, n = 10), format = 'html')
+DT::datatable(lfq)
 ```
 </center>
 
@@ -128,21 +125,22 @@ proteingroups <- proteingroups %>% filter(is.na(`Only identified by site`),
                          is.na(Reverse),
                          is.na(`Potential contaminant`))
 
-proteingroups <- proteingroups %>%
+to_protti <- proteingroups %>%
     select(`Protein IDs`, `Peptide sequences`, 
            contains('LFQ intensity') & contains('TOTALS') & (ends_with('22') | ends_with('23') | ends_with('24'))) %>%
     mutate(`Protein IDs`= paste('prot_', 1:nrow(proteingroups), sep='')) %>%
     pivot_longer(3:8, names_to = 'Sample', values_to = 'Intensity')%>%
     mutate(Sample = gsub('LFQ intensity ', '', Sample)) %>%
-    separate(col =  Sample, into = c("celltype","sampletype","rep"), sep = "_", remove = F) %>%
+    mutate(Sample = gsub('_TOTALS_', '_', Sample)) %>%
+    separate(col =  Sample, into = c("celltype","rep"), sep = "_", remove = F) %>%
     mutate(Condition = ifelse(celltype == 'KO', 'treated', 'control'),
-           Intensity = ifelse(Intensity == 0, NA, log2(Intensity))) %>%
+           Intensity = ifelse(Intensity == 0, NA, log2(Intensity))) %>% 
     select(Sample, `Protein IDs`, `Peptide sequences`, Condition, Intensity) 
 ```
 
 <center>
 ```{r echo=FALSE}
-knitr::kable(head(proteingroups), format = 'html', row.names = FALSE)
+DT::datatable(head(to_protti), rownames = FALSE)
 ```
 </center>
 
@@ -154,20 +152,26 @@ The `protti` library gives us fxn to normalise data, but the function has only
 median method which is the original intensity minus the run median plus the global median. 
 
 ```{r normalisation}
-normalised_data <- proteingroups %>%
+normalised_data <- to_protti %>%
     protti::normalise(sample = Sample,
               intensity_log2 = Intensity,
               method = 'median')
 ```
 
 ```{r echo=FALSE}
-ggplot(data=normalised_data) + 
-    geom_histogram(aes(x=normalised_intensity_log2), bins=20) +
-    labs(title='Histogram of Normalised LFQ Intensity', x=' Normalised LFQ Values')
+ggarrange(
+    ggplot(data=normalised_data[normalised_data$Sample %in% c('KO_22', 'KO_23', 'KO_24'),]) + 
+        geom_histogram(aes(x=normalised_intensity_log2, fill = Sample),bins=20, alpha=0.5, position = "identity") +
+        labs(title='Normalised LFQ Intensity - KO', x=' Normalised LFQ Values'),
+    ggplot(data=normalised_data[normalised_data$Sample %in% c('WT_22', 'WT_23', 'WT_24'),]) + 
+        geom_histogram(aes(x=normalised_intensity_log2, fill = Sample),bins=20, alpha=0.5, position = "identity") +
+        labs(title='Normalised LFQ Intensity - WT', x=' Normalised LFQ Values'),
+    nrow=2,ncol=1
+)
 ```
 
 
-```{r}
+```{r echo=FALSE}
 ggplot(data=normalised_data, mapping=aes(x=Sample, y = normalised_intensity_log2, fill=Sample)) + 
     geom_boxplot(width=0.2)+
     geom_violin(alpha=0.4)+
@@ -193,6 +197,24 @@ for the precursor/peptide and that has a spread of the mean standard deviation f
 the mean noise for the precursor/peptide and that has a spread of the mean standard 
 deviation (from each condition) for the precursor/peptide.
 
+Before imputation, we have assign the missigness rows in our data. We can do that
+with [`assign_missingess()`](https://jpquast.github.io/protti/reference/assign_missingness.html)
+fxn from `protti` library. This fxn returns a inputed dataframe extended by:
+
+1. the `comparison` column contains the comparison name for the specific treatment/reference pair.
+2. the `missingness` column reports the type of missingness.
+
+Types of missingness:
+
+* `"complete"`: No missing values for every replicate of this reference/treatment 
+pair for the specific grouping variable.
+* `"MNAR"`: Missing not at random. All replicates of either the reference or 
+treatment condition have missing values for the specific grouping variable.
+* `"MAR"`: Missing at random. At least n-1 replicates have missing values for the 
+reference/treatment pair for the specific grouping varible.
+* `NA`: The comparison is not complete enough to fall into any other category. 
+It will not be imputed if imputation is performed.
+
 ```{r handle with missing data}
 # Assigning missing rows
 data_missing <- normalised_data %>%
@@ -202,6 +224,24 @@ data_missing <- normalised_data %>%
                        intensity = normalised_intensity_log2,
                        ref_condition = 'all')
 ```
+
+<center>**Summary of assigning missigness rows**</center>
+
+```{r echo=FALSE}
+DT::datatable(data.frame(MNAR = length(which(data_missing$missingness == 'MNAR')),
+                         MAR = length(which(data_missing$missingness == 'MAR')),
+                         complete = length(which(data_missing$missingness == 'complete')),
+                         'NA' = sum(is.na(data_missing$missingness)), row.names = 'Entries'),
+              options=list(searching=FALSE, paging=FALSE, info=FALSE))
+```
+
+We can see that in the data there is still a lot of missing rows.
+
+```{r echo=FALSE}
+DT::datatable(data_missing, rownames = FALSE, options=list(pageLength=6))
+```
+
+
 
 ### Method `ludovic`
 
@@ -243,27 +283,42 @@ noise_imp <- impute(
 ### Visualizations
 
 ```{r echo=FALSE}
+ludovic_to_plot_KO <- ludovic_imp[ludovic_imp$Sample %in% c('KO_22', 'KO_23', 'KO_24'), c("Sample", "imputed_intensity")] 
+ludovic_to_plot_WT <- ludovic_imp[ludovic_imp$Sample %in% c('WT_22', 'WT_23', 'WT_24'), c("Sample", "imputed_intensity")] 
+
+noise_to_plot_KO <- noise_imp[noise_imp$Sample %in% c('KO_22', 'KO_23', 'KO_24'), c("Sample", "imputed_intensity")] 
+noise_to_plot_WT <- noise_imp[noise_imp$Sample %in% c('WT_22', 'WT_23', 'WT_24'), c("Sample", "imputed_intensity")] 
+
 ggarrange(
-    ggplot()+geom_histogram(aes(x=ludovic_imp$imputed_intensity), fill='red', alpha=0.4, bins=20),
-    ggplot()+geom_histogram(aes(x=noise_imp$imputed_intensity), fill='green', alpha=0.4, bins=20),
-    nrow=2
+    plothist(LFQ_KO, 'Non-Imputed Values') + theme(legend.position = 'none') + xlab('KO'),
+    plothist(LFQ_WT, plot.title.and.legend = FALSE) + labs(title='', x='WT'),
+    ggplot(data=ludovic_to_plot_KO)+
+        geom_histogram(aes(x=imputed_intensity,fill=Sample), alpha=0.4, bins=20, position = 'identity')+
+        labs(title='Imputed Values with Ludovic Method', x='KO', y='Frequency')+theme(legend.position = 'none'),
+    ggplot(data=ludovic_to_plot_WT)+
+        geom_histogram(aes(x=imputed_intensity,fill=Sample), alpha=0.4, bins=20, position = 'identity')+
+        labs(title='', x='WT', y='')+theme(legend.position = 'none'),
+    ggplot(data=noise_to_plot_KO)+
+        geom_histogram(aes(x=imputed_intensity,fill=Sample), alpha=0.4, bins=20, position = 'identity')+
+        labs(title='Imputed Values with Noise Method', x='KO', y='Frequency')+theme(legend.position = 'none'),
+    ggplot(data=noise_to_plot_WT)+
+        geom_histogram(aes(x=imputed_intensity,fill=Sample), alpha=0.4, bins=20, position = 'identity')+
+        labs(title='', x='WT', y='')+theme(legend.position = 'none'),
+    nrow=3, ncol=2
 )
 ```
 
-```{r skewness after imp by group}
+```{r skewness after imp by group, echo=FALSE}
 df_to_skew <- data.frame(ludovic_imp$Sample,ludovic_imp$imputed_intensity, noise_imp$imputed_intensity)
 colnames(df_to_skew) <- c('sample', 'ludovic', 'noise')
 
-df_to_skew %>%
+skew <- df_to_skew %>%
     group_by(sample) %>%
     summarise(skewness_ludovic = moments::skewness(ludovic, na.rm=TRUE),
               skewness_noise = moments::skewness(noise, na.rm=TRUE))
-```
 
-```{r skewness after imp}
-moments::skewness(df_to_skew[,2:3], na.rm=TRUE)
+DT::datatable(skew, rownames = FALSE, options=list(searching=FALSE, paging=FALSE, info=FALSE))
 ```
-
 
 Ludovic imputation method has less skewness coefficient. Important is that both 
 imputation methods decreases the skewness coefficient.
@@ -285,7 +340,7 @@ All methods:
 dropout model. This eliminates the need for data imputation since missing values 
 are inferred from the model.
 
-```{r DAAS}
+```{r DAAS t-test}
 result <- ludovic_imp %>%
     calculate_diff_abundance(sample=Sample,
                              condition = Condition,
@@ -297,22 +352,55 @@ result <- ludovic_imp %>%
                              method = 'moderated_t-test')
 ```
 
-The result can be visualize with the volcano plot, which can be also interactive.
+The result can be visualised with the volcano plot, which can also be interactive, 
+but we can't change it to suit our needs. Below is a manually generated volcano plot
+showing the significant proteins split by type of missigness, which also has an 
+influence on the type of imputation.
 
-```{r volcano plot}
-result %>%
-    volcano_plot(grouping = `Protein IDs`,
-                 log2FC = diff,
-                 significance = pval,
-                 method = 'significant',
-                 significance_cutoff = c(0.05, "adj_pval"),
-                 interactive = TRUE)
+```{r echo=FALSE}
+result$significance  <- ifelse(result$adj_pval < 0.05, TRUE, FALSE)
+
+ggplot(data=result, aes(x=diff, y=-log10(pval), colour=missingness , fill=significance, shape=significance)) + 
+    geom_point(size=ifelse(result$significance == TRUE, 3, 1)) +
+    geom_vline(xintercept=c(-1, 1), linetype = 2) +
+    geom_hline(data=subset(result, significance  == TRUE), aes(yintercept=-log10(max(pval))-0.05), linetype=2) +
+    #geom_text(data=subset(result, significance == TRUE), aes(label=`Protein IDs`), vjust=-1.1, hjust=0.5, size=2) +
+    labs(title='Volcano plot for Ludovic Imputed Data', x='log2(fold change)')
 ```
 
+```{r DAAS t-test_mean_sd}
+ludovic_imp$mean <- ifelse(ludovic_imp$Condition == 'control', 
+                           mean(ludovic_imp$imputed_intensity[which(ludovic_imp$Condition == 'control')], na.rm = TRUE),
+                           mean(ludovic_imp$imputed_intensity[which(ludovic_imp$Condition == 'treated')], na.rm = TRUE))
+
+ludovic_imp$sd <- ifelse(ludovic_imp$Condition == 'control', 
+                           sd(ludovic_imp$imputed_intensity[which(ludovic_imp$Condition == 'control')], na.rm = TRUE),
+                           sd(ludovic_imp$imputed_intensity[which(ludovic_imp$Condition == 'treated')], na.rm = TRUE))
+
+ludovic_imp$n_samples <- ifelse(ludovic_imp$Condition == 'control', 
+                           length(ludovic_imp$imputed_intensity[which(ludovic_imp$Condition == 'control')]),
+                           length(ludovic_imp$imputed_intensity[which(ludovic_imp$Condition == 'treated')]))
+
+result <- ludovic_imp %>%
+    calculate_diff_abundance(sample=Sample,
+                             condition = Condition,
+                             grouping = `Protein IDs`,
+                             intensity_log2 = imputed_intensity,
+                             missingness = missingness,
+                             comparison = comparison,
+                             filter_NA_missingness = TRUE,
+                             method = 't-test_mean_sd',
+                             mean = mean,
+                             sd = sd,
+                             n_samples = n_samples,
+                             ref_condition = 'all')
+```
+
+The volcano plot look strange for the result of the DAAS with `t-test_mean_sd`.
 
 **CORELATION OF VARIATION**
 
-```{r}
+```{r echo=FALSE}
 cv <- function(x) (sd(x) / mean(x)) * 100
 
 # extract data with values for all samples
@@ -321,17 +409,34 @@ all_imp <- as.data.frame(ludovic_imp)[which(ludovic_imp$`Protein IDs` %in% resul
 lfq_wider <- all_imp %>%
     select(Sample, imputed_intensity) %>%
     pivot_wider(names_from = Sample, values_from = imputed_intensity, values_fn = list) %>%
-    unnest(cols = c(KO_TOTALS_22, KO_TOTALS_23, KO_TOTALS_24, WT_TOTALS_22, WT_TOTALS_23, WT_TOTALS_24))
+    unnest(cols = c(KO_22, KO_23, KO_24, WT_22, WT_23, WT_24))
 
-cv_imp <- apply(lfq_wider, 1, cv)
+lfq_imp_KO <- lfq_wider %>% select(contains('KO'))
+lfq_imp_WT <- lfq_wider %>% select(contains('WT'))
 
-plotoneviolin(cv_imp, xlab='Non-Imputed')
+cv_imp_KO <- apply(2^lfq_imp_KO, 1, cv)
+cv_imp_WT <- apply(2^lfq_imp_WT, 1, cv)
+cv_all <- as.data.frame(cbind(KO=cv_imp_KO, WT=cv_imp_WT))
+```
+
+```{r echo=FALSE}
+cv_to_plot <- cv_all %>%
+    pivot_longer(everything(), names_to = 'Sample', values_to = 'LFQ_CV')
+
+ggplot(data=cv_to_plot, aes(x=Sample, y=LFQ_CV, fill=Sample))+
+    geom_boxplot(width=0.4)+
+    geom_violin(alpha=0.5)+
+    labs(title='Distribution of LFQ CV',x='', y='LFQ CV [%]')+
+    theme(plot.title = element_text(hjust=0.5), legend.position = 'none')
 ```
 
 <center>
 ```{r echo=FALSE}
-base_cv_stats <- data.frame(mean = mean(cv_imp), median=median(cv_imp), sd = sd(cv_imp))
-knitr::kable(base_cv_stats, format = 'html', row.names = FALSE)
+base_cv_stats <- cv_to_plot %>%
+    group_by(Sample) %>%
+    summarise(mean=mean(LFQ_CV), median=median(LFQ_CV), sd=sd(LFQ_CV))
+
+DT::datatable(base_cv_stats, rownames = FALSE, options=list(searching=FALSE, paging=FALSE, info=FALSE))
 ```
 </center>
 
